# cv_hazmat_detector

./: CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: detector.py
